@@ -2,16 +2,16 @@ AUX eclipse-3.2 1145 RMD160 141c5d412c50dcb106654b4078cbaf379b468130 SHA1 6c317e
 MD5 f6ff94ca35dee12929539c1c6936d7c9 files/eclipse-3.2 1145
 RMD160 141c5d412c50dcb106654b4078cbaf379b468130 files/eclipse-3.2 1145
 SHA256 920b48ed98bc18f6e90769fe084eced46304c4c1a8b3999c5644297f437b1cbd files/eclipse-3.2 1145
-DIST eclipse-sdk-3.2.1-patches-fridrik.tar.bz2 86387 RMD160 f74db89228bf46f3e3f2cb01f247f8a99c91d035 SHA1 7e7ef6b274063ad057d2766de5eb75d4b3f81879 SHA256 859a63f274f9d8d7dc095b262e41c9126096496e4327d535ed761e68e0086426
+DIST eclipse-sdk-3.2.1-r1-patches.tar.bz2 85951 RMD160 55a0f98229feb47d936acbcdcf7ad42074ebdb5c SHA1 4af81d8615dbfbd771136c441ee8a7b53096b468 SHA256 fa9f8d047d8375ab55eaca12c110bd9faf9eb5452af2a70d038afd5a6b4b5171
 DIST eclipse-sourceBuild-srcIncluded-3.2.1.zip 82433420 RMD160 9648176b79adac7217371e5b8dee7aeb4cd458db SHA1 a27bae4ff9f866a1fab995eae2da00ab2be5e840 SHA256 2d6a0628333d068b6ab678c42f925d71df1c003035543830a30e3ee80fb855c7
-EBUILD eclipse-sdk-3.2.1-r2.ebuild 20673 RMD160 43cbbfd53ed5068f39f71da03f0ef7fb5fa49790 SHA1 759cade95942211d34766bd91ea293753bcd0e4a SHA256 305943017dc1748619c18eccbffda89cb3c3ea610a8c978a89952edf3234dc13
-MD5 ed0adb794cfff0b6c52a8228d976ce30 eclipse-sdk-3.2.1-r2.ebuild 20673
-RMD160 43cbbfd53ed5068f39f71da03f0ef7fb5fa49790 eclipse-sdk-3.2.1-r2.ebuild 20673
-SHA256 305943017dc1748619c18eccbffda89cb3c3ea610a8c978a89952edf3234dc13 eclipse-sdk-3.2.1-r2.ebuild 20673
-MISC ChangeLog 691 RMD160 15a0ea1a9a418dc4dd783403be3a79bb707cd10c SHA1 1ac85c5ccfa2fa4f6f5f8675be11a097a7017884 SHA256 9e5e382bfed21bf3ea9196c8bd7bffea97cad5afb5036b0563329c9c24daa3ad
-MD5 d4a0b3610e401ebb656378231f31462c ChangeLog 691
-RMD160 15a0ea1a9a418dc4dd783403be3a79bb707cd10c ChangeLog 691
-SHA256 9e5e382bfed21bf3ea9196c8bd7bffea97cad5afb5036b0563329c9c24daa3ad ChangeLog 691
-MD5 380f000b222f557d43e81de9f1a81f2d files/digest-eclipse-sdk-3.2.1-r2 611
-RMD160 cfed49271053de6e13df9a68131ea2edec197643 files/digest-eclipse-sdk-3.2.1-r2 611
-SHA256 a5c210124131182508d602023d69cf35be4d99f63b5276943cb9f49aa82ddaca files/digest-eclipse-sdk-3.2.1-r2 611
+EBUILD eclipse-sdk-3.2.1-r2.ebuild 23525 RMD160 314bc808bed2ece502cce376fd435ce45713f329 SHA1 e34b71b4ce3a36c8fdfeac11af15e3a18ed526c7 SHA256 f4c7b2d1b012ba7aeb2bdcf2ee181ae94f4b717bb448d4e8ce272c426df85847
+MD5 698dccc28fd5dc8eb21a10b170d8eccc eclipse-sdk-3.2.1-r2.ebuild 23525
+RMD160 314bc808bed2ece502cce376fd435ce45713f329 eclipse-sdk-3.2.1-r2.ebuild 23525
+SHA256 f4c7b2d1b012ba7aeb2bdcf2ee181ae94f4b717bb448d4e8ce272c426df85847 eclipse-sdk-3.2.1-r2.ebuild 23525
+MISC ChangeLog 834 RMD160 3289a7988ec4305c0b1a07df0842e094b3c4f579 SHA1 d192e8cbc5ea9a39d26b0967d32f4fd7f87898fc SHA256 5569c251022608f76c7cb9f637367c365e25ee4e77099a74123f52f37f554a6a
+MD5 287935204b6b02d7aee453c2858125b9 ChangeLog 834
+RMD160 3289a7988ec4305c0b1a07df0842e094b3c4f579 ChangeLog 834
+SHA256 5569c251022608f76c7cb9f637367c365e25ee4e77099a74123f52f37f554a6a ChangeLog 834
+MD5 2364957019ebba24ca9af9631f7a86c8 files/digest-eclipse-sdk-3.2.1-r2 596
+RMD160 130025e444efc3a79b198baa4b673b49b117400f files/digest-eclipse-sdk-3.2.1-r2 596
+SHA256 da442cfe724dbdf31b936830117b876bff94378e5bbb0e1162d12ce590de0e82 files/digest-eclipse-sdk-3.2.1-r2 596
