@@ -2,6 +2,9 @@
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  07 Nov 2006; Federico Fissore <federico@fsfe.org> ChangeLog:
+  reverting to latest running eclipse ebuild, due to errors on eclipse startup
+
   06 Nov 2006; Federico Fissore <federico@fsfe.org> ChangeLog:
   added tomcat use flag. reviewed patchset
 
